fixed content overflow in wiki page

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -2313,6 +2313,7 @@ section.wiki h1 {
 section.wiki .alert {
     margin: 20px;
     padding-right: 30px;
+    word-break: break-all;
 }
 
 section.wiki .alert .close {
@@ -3276,6 +3277,7 @@ body .instructor-dashboard-wrapper-2 section.idash-section#membership .member-li
 .view-profile .profile-section-two-fields .u-field-value {
     overflow: hidden;
     text-overflow: ellipsis;
+    word-break: break-all;
 }
 .my-courses .empty-dashboard-message a {
     color: $white;
